--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="javascripts/script.js"></script>
   </head>
-  <body>
+  <body class="margin-bottom-2x">
     <div class="container margin-bottom-5x">
       <div class="row">
         <div class="twelve columns">
