Education section was updated.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="margin-bottom-1x">2011 &mdash; 2016</div>
           </div>
           <div class="two-thirds column">
-            <h4>Moscow Bauman State Technical University</h4>
+            <h4>Bauman Moscow State Technical University</h4>
             <strong>Faculty:</strong> Informatics and Control Systems<br>
             <strong>Sub-Faculty:</strong> Computer Systems, Complexes and Networks<br>
             <strong>Speciality:</strong> Computer Science and Engineering<br>
