--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       <div class="media info-block-header margin-top-1x margin-bottom-1x">
         <div class="media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
-          <i class="fas fa-plus fa-inverse" data-fa-transform="shrink-6"></i>
+          <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
         <div class="media-content">Skills</div>
       </div>
-      <div class="info-block-content">
+      <div class="info-block-content-active">
         <div class="row">
           <div class="one-half column margin-top-1x">
             <h5><strong>Technical Skills:</strong></h5>
@@ -183,11 +183,11 @@
       <div class="media info-block-header margin-top-1x margin-bottom-1x">
         <div class="media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
-          <i class="fas fa-plus fa-inverse" data-fa-transform="shrink-6"></i>
+          <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
         <div class="media-content">Work Experience</div>
       </div>
-      <div class="info-block-content">
+      <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column work-place">
             <p><em>Software Engineer</em></p>
@@ -238,11 +238,11 @@
       <div class="media info-block-header margin-top-1x margin-bottom-1x">
         <div class="media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
-          <i class="fas fa-plus fa-inverse" data-fa-transform="shrink-6"></i>
+          <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
         <div class="media-content">Education</div>
       </div>
-      <div class="info-block-content">
+      <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column">
             <div class="margin-bottom-1x">Bachelor's Degree</div>
@@ -263,11 +263,11 @@
       <div class="media info-block-header margin-top-1x margin-bottom-1x">
         <div class="media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
-          <i class="fas fa-plus fa-inverse" data-fa-transform="shrink-6"></i>
+          <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
         <div class="media-content">Courses and Certificates</div>
       </div>
-      <div class="info-block-content">
+      <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column">
             <div class="margin-bottom-1x">September 2018 &mdash; February 2019</div>
