--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="stylesheet" href="stylesheets/normalize.css">
     <link rel="stylesheet" href="stylesheets/skeleton.css">
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="javascripts/script.js"></script>
   </head>
-  <body class="margin-bottom-2x">
+  <body class="margin-top-2x margin-bottom-2x">
     <div class="container margin-bottom-5x">
       <div class="row">
         <div class="twelve columns">
-          <h1 class="content-center">RUBY ON RAILS DEVELOPER</h1>
+          <h1 class="title-center">Kirill Ilyin</h1>
+          <h3 class="title-center">Ruby on Rails Developer</h3>
         </div>
       </div>
 
@@ -35,14 +37,7 @@
         </div>
 
         <div class="one-half column">
-          <h3>Personal Information:</h3>
-          <div class="media margin-bottom-1x">
-            <div class="media-left fa-layers fa-fw fa-2x">
-              <i class="fas fa-circle"></i>
-              <i class="fas fa-male fa-inverse" data-fa-transform="shrink-6"></i>
-            </div>
-            <div class="media-content">Kirill Ilyin</div>
-          </div>
+          <h4 class="">Personal Information:</h4>
           <div class="media margin-bottom-1x">
             <div class="media-left icon fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
@@ -51,7 +46,7 @@
             <div class="media-content">
               <address>
                 Russia, Moscow region<br>
-                Khotkovo<br>
+                Khotkovo
               </address>
             </div>
           </div>
@@ -88,12 +83,12 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Skills</div>
+        <div class="collapsible-icon fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Skills</div>
       </div>
       <div class="info-block-content-active">
         <div class="row">
@@ -172,7 +167,7 @@
             <h5><strong>Languages:</strong></h5>
               <ul>
                 <li><strong>Russian (C2)</strong> — Native language</li>
-                <li><strong>English (B1)</strong> — Pre-Intermediate/Intermediate level</li>
+                <li><strong>English (B1)</strong> — Intermediate level</li>
               </ul>
           </div>
         </div>
@@ -180,12 +175,12 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Work Experience</div>
+        <div class="collapsible-icon fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Work Experience</div>
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
@@ -235,12 +230,12 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Education</div>
+        <div class="collapsible-icon media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Education</div>
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
@@ -249,7 +244,7 @@
             <div class="margin-bottom-1x">2011 &mdash; 2016</div>
           </div>
           <div class="two-thirds column">
-            <h4>Bauman Moscow State Technical University</h4>
+            <h5><strong>Bauman Moscow State Technical University</strong></h5>
             <strong>Faculty:</strong> Informatics and Control Systems<br>
             <strong>Sub-Faculty:</strong> Computer Systems, Complexes and Networks<br>
             <strong>Speciality:</strong> Computer Science and Engineering<br>
@@ -260,12 +255,12 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Courses and Certificates</div>
+        <div class="collapsible-icon media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Courses and Certificates</div>
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
@@ -273,7 +268,7 @@
             <div class="margin-bottom-1x">September 2018 &mdash; February 2019</div>
           </div>
           <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Online-school Good Programmer</strong></div>
+            <h5><strong>Online-school Good Programmer</strong></h5>
             Ruby on Rails intensive course
             <a href="#0">
               (certificate will be updated soon)
@@ -283,40 +278,14 @@
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column">
-            <div class="margin-bottom-1x">November 2018 &mdash; December 2018</div>
+            <div class="margin-bottom-1x">April 2018 &mdash; December 2018</div>
           </div>
           <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Online-school EnglishTochka by Alex Rubanov</strong></div>
-            English Course
-            <a href="#0">
-              (certificate will be updated soon)
-            </a><br>
-            <a href="https://englishtochka.ru/">Official site</a>
-          </div>
-        </div>
-        <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">September 2018 &mdash; October 2018</div>
-          </div>
-          <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Online-school EnglishTochka by Alex Rubanov</strong></div>
-            English Course
-            <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">
-              (certificate)
-            </a><br>
-            <a href="https://englishtochka.ru/">Official site</a>
-          </div>
-        </div>
-        <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">April 2018 &mdash; May 2018</div>
-          </div>
-          <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Online-school EnglishTochka by Alex Rubanov</strong></div>
-            English Course
-            <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">
-              (certificate)
-            </a><br>
+            <h5><strong>Online-school EnglishTochka by Alex Rubanov</strong></h5>
+            English Course. Certificates:&nbsp;
+            <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">#1</a>&nbsp;
+            <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">#2</a>&nbsp;
+            <a href="http://www.engtochka.ru/certtest/nov2018/d0bad2c5f9f17eb73957a4d003ba77a8.html">#3</a><br>
             <a href="https://englishtochka.ru/">Official site</a>
           </div>
         </div>
