--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column work-place">
-            <p><em>Software Engineer</em></p>
-            <p><strong>May 2018 &mdash; August 2018</strong></p>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Software Engineer</p>
+            <p>May 2018 &mdash; August 2018</p>
             <p>EOS (Electronic Office Systems). Moscow, Russia</p>
-            <div class="margin-bottom-1x"><a href="https://www.eos.ru/eng/">Official site</a></div>
+            <a href="https://www.eos.ru/eng/">Official site</a>
           </div>
           <div class="two-thirds column">
             <h5><strong>Responsibilities:</strong></h5>
@@ -210,11 +210,11 @@
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column work-place">
-            <p><em>Programmer (CRM Terrasoft BPM Online)</em></p>
-            <p><strong>January 2017 &mdash; March 2018</strong></p>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Programmer (CRM Terrasoft BPM Online)</p>
+            <p>January 2017 &mdash; March 2018</p>
             <p>TOPCRM LLC. Sergiev Posad, Russia</p>
-            <div class="margin-bottom-1x"><a href="http://topcrm.org/">Official site</a></div>
+            <a href="http://topcrm.org/">Official site</a>
           </div>
           <div class="two-thirds column">
             <h5><strong>Responsibilities:</strong></h5>
@@ -239,9 +239,9 @@
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">Bachelor's Degree</div>
-            <div class="margin-bottom-1x">2011 &mdash; 2016</div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Bachelor's Degree</p>
+            <p>August 2011 &mdash; September 2016</p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Bauman Moscow State Technical University</strong></h5>
@@ -264,8 +264,9 @@
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">September 2018 &mdash; February 2019</div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Junior Practitioner</p>
+            <p>September 2018 &mdash; February 2019</p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school Good Programmer</strong></h5>
@@ -277,8 +278,9 @@
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">April 2018 &mdash; December 2018</div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Student</p>
+            <p>April 2018 &mdash; December 2018</p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school EnglishTochka by Alex Rubanov</strong></h5>
