--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <title>Kirill Ilyin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
-    <link rel="shortcut icon" type="image/svg" href="images/favicon.svg">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="images/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="stylesheets/normalize.css">
     <link rel="stylesheet" href="stylesheets/skeleton.css">
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
@@ -95,79 +111,31 @@
           <div class="one-half column margin-top-1x">
             <h5><strong>Technical Skills:</strong></h5>
               <ul>
+              	<li>
+              		<strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST
+              	</li>
                 <li>
-                  <strong>Back-end</strong>
-                  <ul class="horizontal">
-                    <li>Ruby</li>
-                    <li>ROR</li>
-                    <li>OOP</li>
-                    <li>MVC</li>
-                    <li>REST</li>
-                  </ul>
+                  <strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap
                 </li>
                 <li>
-                  <strong>Front-end</strong>
-                  <ul class="horizontal">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>jQuery</li>
-                    <li>Skeleton</li>
-                    <li>Bootstrap</li>
-                  </ul>
+                  <strong>Databases</strong> &mdash; SQLite, PostgreSQL, MSSQL
                 </li>
                 <li>
-                  <strong>Databases</strong>
-                  <ul class="horizontal">
-                    <li>SQLite</li>
-                    <li>PostgreSQL <strong>(in progress of studying)</strong></li>
-                  </ul>
+                  <strong>Source Control</strong> &mdash; Git
                 </li>
                 <li>
-                  <strong>Testing</strong>
-                  <ul class="horizontal">
-                    <li>TDD/BDD</li>
-                    <li>RSpec</li>
-                    <li>FactoryBot</li>
-                    <li>Capybara</li>
-                  </ul>
+                  <strong>DevOps</strong> &mdash; Heroku, AWS, Nginx + Passenger, Capistrano, Redis
                 </li>
                 <li>
-                  <strong>Source Control</strong>
-                  <ul class="horizontal">
-                    <li>Git</li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>DevOps</strong>
-                  <ul class="horizontal">
-                    <li>Heroku</li>
-                    <li>AWS</li>
-                    <li>Nginx + Passenger</li>
-                    <li>Capistrano <strong>(in progress of studying)</strong></li>
-                    <li>Redis <strong>(in progress of studying)</strong></li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>Other skills</strong>
-                  <ul class="horizontal">
-                    <li>C#</li>
-                    <li>WPF</li>
-                    <li>EntityFramework</li>
-                    <li>C/C++</li>
-                    <li>QT</li>
-                    <li>Delphi</li>
-                    <li>MSSQL</li>
-                  </ul>
+                  <strong>Other skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi
                 </li>
               </ul>
-
           </div>
           <div class="one-half column margin-top-1x">
             <h5><strong>Languages:</strong></h5>
               <ul>
-                <li><strong>Russian (C2)</strong> — Native language</li>
-                <li><strong>English (B1)</strong> — Intermediate level</li>
+                <li><strong>Russian (C2)</strong> &mdash; Native language</li>
+                <li><strong>English (B1)</strong> &mdash; Intermediate level</li>
               </ul>
           </div>
         </div>
@@ -270,10 +238,7 @@
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school Good Programmer</strong></h5>
-            Ruby on Rails intensive course
-            <a href="#0">
-              (certificate will be updated soon)
-            </a><br>
+            Ruby on Rails intensive course. <a href="#0">Certificate (certificate will be updated soon)</a><br>
             <a href="https://goodprogrammer.ru/">Official site</a>
           </div>
         </div>
