--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         </div>
 
         <div class="one-half column">
-          <h4 class="">Personal Information:</h4>
+          <h4>Personal Information:</h4>
           <div class="media margin-bottom-1x">
-            <div class="media-left icon fa-layers fa-fw fa-2x">
+            <div class="media-left fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
               <i class="fas fa-home fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
@@ -111,24 +111,12 @@
           <div class="one-half column margin-top-1x">
             <h5><strong>Technical Skills:</strong></h5>
               <ul>
-              	<li>
-              		<strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST
-              	</li>
-                <li>
-                  <strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap
-                </li>
-                <li>
-                  <strong>Databases</strong> &mdash; SQLite, PostgreSQL, MSSQL
-                </li>
-                <li>
-                  <strong>Source Control</strong> &mdash; Git
-                </li>
-                <li>
-                  <strong>DevOps</strong> &mdash; Heroku, AWS, Nginx + Passenger, Capistrano, Redis
-                </li>
-                <li>
-                  <strong>Other skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi
-                </li>
+              	<li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST</li>
+                <li><strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap</li>
+                <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MSSQL</li>
+                <li><strong>Version control system</strong> &mdash; Git (Github, GitLab)</li>
+                <li><strong>DevOps</strong> &mdash; Heroku, AWS, Nginx/Passenger, Capistrano</li>
+                <li><strong>Other skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
               </ul>
           </div>
           <div class="one-half column margin-top-1x">
@@ -155,25 +143,16 @@
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Software Engineer</p>
             <p>May 2018 &mdash; August 2018</p>
-            <p>EOS (Electronic Office Systems). Moscow, Russia</p>
-            <a href="https://www.eos.ru/eng/">Official site</a>
+            <p>EOS (Electronic Office Systems), Moscow, Russia</p>
+            <p><a href="https://www.eos.ru/eng/">Official site</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Responsibilities:</strong></h5>
             <ul>
-              <li>
-                Create and improve an electronic document management system developed on the basis of the Microsoft
-                SharePoint platform.
-              </li>
-              <li>
-                Participate in updating the system architecture on ASP.NET MVC/Core MVC.
-              </li>
-              <li>
-                Participate in making technical decisions.
-              </li>
-              <li>
-                Fix user bugs.
-              </li>
+              <li>Creating and improving an electronic document management system developed on the basis of the Microsoft SharePoint platform.</li>
+              <li>Participation in updating the system architecture on ASP.NET MVC/Core MVC.</li>
+              <li>Participation in making technical decisions.</li>
+              <li>Fixing user bugs.</li>
             </ul>
           </div>
         </div>
@@ -181,16 +160,16 @@
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Programmer (CRM Terrasoft BPM Online)</p>
             <p>January 2017 &mdash; March 2018</p>
-            <p>TOPCRM LLC. Sergiev Posad, Russia</p>
-            <a href="http://topcrm.org/">Official site</a>
+            <p>TOPCRM LLC, Sergiev Posad, Russia</p>
+            <p><a href="http://topcrm.org/">Official site</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Responsibilities:</strong></h5>
             <ul>
-              <li>Improve existing modules on the Terrasoft platform for the configuration of the CRM system.</li>
-              <li>Customize and improve UI for the CRM system.</li>
-              <li>Develop business processes for the CRM system.</li>
-              <li>Configure the CRM system.</li>
+              <li>Improving existing modules on the Terrasoft platform for the configuration of the CRM system.</li>
+              <li>Customizing and improving UI for the CRM system.</li>
+              <li>Developing business processes for the CRM system.</li>
+              <li>Configuring the CRM system.</li>
             </ul>
           </div>
         </div>
@@ -233,8 +212,8 @@
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
-            <p class="title">Junior Practitioner</p>
-            <p>September 2018 &mdash; February 2019</p>
+            <p class="title">Trainee</p>
+            <p>September 2018 &mdash; April 2019</p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school Good Programmer</strong></h5>
