--- a/russian_index.html
+++ b/russian_index.html
@@ -5,19 +5,37 @@
     <title>Кирилл Ильин</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
-    <link rel="shortcut icon" type="image/svg" href="images/favicon.svg">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="images/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="stylesheets/normalize.css">
     <link rel="stylesheet" href="stylesheets/skeleton.css">
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="javascripts/script.js"></script>
   </head>
-  <body class="margin-bottom-2x">
+  <body class="margin-top-2x margin-bottom-2x">
     <div class="container margin-bottom-5x">
       <div class="row">
         <div class="twelve columns">
-          <h1 class="content-center">RUBY ON RAILS РАЗРАБОТЧИК</h1>
+          <h1 class="title-center">Кирилл Ильин</h1>
+          <h3 class="title-center">Ruby on Rails Разработчик</h3>
         </div>
       </div>
 
@@ -35,16 +53,9 @@
         </div>
 
         <div class="one-half column">
-          <h3>Личная Информация:</h3>
+          <h4>Личная Информация:</h4>
           <div class="media margin-bottom-1x">
             <div class="media-left fa-layers fa-fw fa-2x">
-              <i class="fas fa-circle"></i>
-              <i class="fas fa-male fa-inverse" data-fa-transform="shrink-6"></i>
-            </div>
-            <div class="media-content">Кирилл Ильин</div>
-          </div>
-          <div class="media margin-bottom-1x">
-            <div class="media-left icon fa-layers fa-fw fa-2x">
               <i class="fas fa-circle"></i>
               <i class="fas fa-home fa-inverse" data-fa-transform="shrink-6"></i>
             </div>
@@ -88,91 +99,31 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Skills</div>
+        <div class="collapsible-icon fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Навыки</div>
       </div>
       <div class="info-block-content-active">
         <div class="row">
           <div class="one-half column margin-top-1x">
             <h5><strong>Технические навыки:</strong></h5>
               <ul>
-                <li>
-                  <strong>Back-end</strong>
-                  <ul class="horizontal">
-                    <li>Ruby</li>
-                    <li>ROR</li>
-                    <li>OOP</li>
-                    <li>MVC</li>
-                    <li>REST</li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>Front-end</strong>
-                  <ul class="horizontal">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>jQuery</li>
-                    <li>Skeleton</li>
-                    <li>Bootstrap</li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>Databases</strong>
-                  <ul class="horizontal">
-                    <li>SQLite</li>
-                    <li>PostgreSQL <strong>(в процессе изучения)</strong></li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>Testing</strong>
-                  <ul class="horizontal">
-                    <li>TDD/BDD</li>
-                    <li>RSpec</li>
-                    <li>FactoryBot</li>
-                    <li>Capybara</li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>Source Control</strong>
-                  <ul class="horizontal">
-                    <li>Git</li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>DevOps</strong>
-                  <ul class="horizontal">
-                    <li>Heroku</li>
-                    <li>AWS</li>
-                    <li>Nginx + Passenger</li>
-                    <li>Capistrano <strong>(в процессе изучения)</strong></li>
-                    <li>Redis <strong>(в процессе изучения)</strong></li>
-                  </ul>
-                </li>
-                <li>
-                  <strong>Other skills</strong>
-                  <ul class="horizontal">
-                    <li>C#</li>
-                    <li>WPF</li>
-                    <li>EntityFramework</li>
-                    <li>C/C++</li>
-                    <li>QT</li>
-                    <li>Delphi</li>
-                    <li>MSSQL</li>
-                  </ul>
-                </li>
+                <li><strong>Back-end</strong> &mdash; Ruby, ROR, OOP, MVC, REST</li>
+                <li><strong>Front-end</strong> &mdash; HTML, CSS, JavaScript, jQuery, Skeleton, Bootstrap</li>
+                <li><strong>Databases</strong> &mdash; SQLite, PostgreSQL, MSSQL</li>
+                <li><strong>Version control system</strong> &mdash; Git (Github, GitLab)</li>
+                <li><strong>DevOps</strong> &mdash; Heroku, AWS, Nginx/Passenger, Capistrano</li>
+                <li><strong>Other skills</strong> &mdash; C#, WPF, EntityFramework, C/C++, QT, Delphi</li>
               </ul>
-
           </div>
           <div class="one-half column margin-top-1x">
             <h5><strong>Знание языков:</strong></h5>
               <ul>
-                <li><strong>Russian (C2)</strong> — Родной язык</li>
-                <li><strong>English (B1)</strong> — Pre-Intermediate/Intermediate уровень</li>
+                <li><strong>Русский (C2)</strong> &mdash; Родной язык</li>
+                <li><strong>Английский (B1)</strong> &mdash; Средний уровень</li>
               </ul>
           </div>
         </div>
@@ -180,54 +131,45 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Опыт работы</div>
+        <div class="collapsible-icon fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Опыт работы</div>
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column work-place">
-            <p><em>Инженер-программист</em></p>
-            <p><strong>Май 2018 &mdash; Август 2018</strong></p>
-            <p>ЭОС (ЭЛЕКТРОННЫЕ ОФИСНЫЕ СИСТЕМЫ). Москва, Россия</p>
-            <div class="margin-bottom-1x"><a href="https://www.eos.ru/">Официальный сайт</a></div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Инженер-программист</p>
+            <p>Май 2018 &mdash; Август 2018</p>
+            <p>ЭОС (Электронные Офисные Системы), Москва, Россия</p>
+            <p><a href="https://www.eos.ru/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Обязанности:</strong></h5>
             <ul>
-              <li>
-                Создавать и дорабатывать систему электронного документооборота, разработанную на базе платформы Microsoft
-                SharePoint
-              </li>
-              <li>
-                Участвовать в обновление архитектуры системы на ASP.NET MVC/Core MVC.
-              </li>
-              <li>
-                Участвовать в принятии технических решений.
-              </li>
-              <li>
-                Исправлять возникающие у пользователей ошибки.
-              </li>
+              <li>Создание и улучшение системы электронного документооборота, разработанную на базе платформы Microsoft SharePoint</li>
+              <li>Участие в обновлении архитектуры системы на ASP.NET MVC/Core MVC.</li>
+              <li>Участие в принятии технических решений.</li>
+              <li>Исправление возникающих ошибок у пользователей.</li>
             </ul>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column work-place">
-            <p><em>Программист (CRM Terrasoft BPM Online)</em></p>
-            <p><strong>Январь 2017 &mdash; Март 2018</strong></p>
-            <p>TOPCRM (ООО "ТОПСИЭРЭМ"). Сергиев Посад, Россия</p>
-            <div class="margin-bottom-1x"><a href="http://topcrm.org/">Официальный сайт</a></div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Программист (CRM Terrasoft BPM Online)</p>
+            <p>Январь 2017 &mdash; Март 2018</p>
+            <p>TOPCRM (ООО "ТОПСИЭРЭМ"), Сергиев Посад, Россия</p>
+            <p><a href="http://topcrm.org/">Официальный сайт</a></p>
           </div>
           <div class="two-thirds column">
             <h5><strong>Обязанности:</strong></h5>
             <ul>
-              <li>Дорабатывать существующие модули на платформе Terrasoft для конфигурации CRM-системы BPM Online.</li>
-              <li>Настраивать и дорабатывать пользовательские интерфейсы для CRM-системы.</li>
-              <li>Разрабатывать бизнес процессы для CRM-системы.</li>
-              <li>Заниматься настройкой CRM-системы.</li>
+              <li>Улучшение существующих модулей на платформе Terrasoft для конфигурации CRM-системы BPM Online.</li>
+              <li>Настройка и улучшение пользовательских интерфейсов для CRM-системы.</li>
+              <li>Разработка бизнес процессов для CRM-системы.</li>
+              <li>Настройка CRM-системы.</li>
             </ul>
           </div>
         </div>
@@ -235,21 +177,21 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Образование</div>
+        <div class="collapsible-icon media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Образование</div>
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">Бакалавр</div>
-            <div class="margin-bottom-1x">2011 &mdash; 2016</div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Бакалавр</p>
+            <p>Август 2011 &mdash; Сентябрь 2016</p>
           </div>
           <div class="two-thirds column">
-            <h4>Московский государственный технический университет им. Н.Э. Баумана</h4>
+            <h5><strong>Московский государственный технический университет им. Н.Э. Баумана</strong></h5>
             <strong>Факультет:</strong> Информатика и системы управления<br>
             <strong>Кафедра:</strong> Компьютерные системы и сети<br>
             <strong>Специализация:</strong> Информатика и вычислительная техника<br>
@@ -260,63 +202,36 @@
     </div>
 
     <div class="container">
-      <div class="media info-block-header margin-top-1x margin-bottom-1x">
-        <div class="media-left fa-layers fa-fw fa-2x">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Курсы и Сертификаты</div>
+        <div class="collapsible-icon media-left fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
         </div>
-        <div class="media-content">Курсы и Сертификаты</div>
       </div>
       <div class="info-block-content-active">
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">Сентябрь 2018 &mdash; Февраль 2019</div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Стажёр</p>
+            <p>Сентябрь 2018 &mdash; Апрель 2019</p>
           </div>
           <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Онлайн-школа Хорошой Программист</strong></div>
-            Интенсив по Ruby on Rails
-            <a href="#0">
-              (сертификат будет обновлён в ближайщее время)
-            </a><br>
+            <h5><strong>Онлайн-школа Хороший Программист</strong></h5>
+            Интенсивный курс по Ruby on Rails. <a href="#0">Сертификат (сертификат будет обновлён в ближайщее время)</a><br>
             <a href="https://goodprogrammer.ru/">Официальный сайт</a>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">Ноябрь 2018 &mdash; Декабрь 2018</div>
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Студент</p>
+            <p>Апрель 2018 &mdash; Декабрь 2018</p>
           </div>
           <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></div>
-            Курс английского языка
-            <a href="#0">
-              (сертификат будет обновлён в ближайщее время)
-            </a><br>
-            <a href="https://englishtochka.ru/">Официальный сайт</a>
-          </div>
-        </div>
-        <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">Сентябрь 2018 &mdash; Октябрь 2018</div>
-          </div>
-          <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></div>
-            Курс английского языка
-            <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">
-              (сертификат)
-            </a><br>
-            <a href="https://englishtochka.ru/">Официальный сайт</a>
-          </div>
-        </div>
-        <div class="row margin-top-1x margin-bottom-3x">
-          <div class="one-third column">
-            <div class="margin-bottom-1x">Апрель 2018 &mdash; Май 2018</div>
-          </div>
-          <div class="two-thirds column">
-            <div class="margin-bottom-1x"><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></div>
-            Курс английского языка
-            <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">
-              (сертификат)
-            </a><br>
+            <h5><strong>Онлайн-школа EnglishTochka Алекса Рубанова</strong></h5>
+            Курс английского языка. Сертификаты:&nbsp;
+            <a href="http://www.engtochka.ru/certtest/feb2018/710632ddb843880b8562e83e9cbae2c9.html">#1</a>&nbsp;
+            <a href="http://www.engtochka.ru/certtest/sept2018/f2c524670d73dc64059949ea065ddc87.html">#2</a>&nbsp;
+            <a href="http://www.engtochka.ru/certtest/nov2018/d0bad2c5f9f17eb73957a4d003ba77a8.html">#3</a><br>
             <a href="https://englishtochka.ru/">Официальный сайт</a>
           </div>
         </div>
