--- a/index.html
+++ b/index.html
@@ -100,6 +100,59 @@
 
     <div class="container">
       <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">About me</div>
+        <div class="collapsible-icon fa-layers fa-fw fa-2x">
+          <i class="fas fa-circle"></i>
+          <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
+        </div>
+      </div>
+      <div class="info-block-content-active">
+        <div class="row">
+          <div class="twelve columns margin-top-1x">
+            <p>
+              Looking for a job Full Stack Ruby on Rails developer. I consider remote work or relocation to another country (preferably
+              European countries).
+            </p>
+            <p>
+              I have been programming for a long time, starting with school and university studies and ending with today. At university, I was
+              pretty good at programming languages ​​like Pascal (Delphi) and C/C++ with using the QT framework. I also studied the Ruby
+              programming language and the Ruby on Rails framework. But I could not learn it at university due to the poor level of teaching.
+              In the end, I didn't want to do development on Ruby on Rails anymore in the future.
+            </p>
+            <p>
+              After graduating from university, I found a job as a programmer. My main programming language was C# and I had been developing
+              applications for a year and a half. At that time, I managed to work in two companies. But, unfortunately, for various reasons, I
+              had to leave these companies and look for a new job, where I could work in a professional team, constantly improve my level of
+              development and become a C # developer at a decent level. All my attempts to find a job were unsuccessful. And I needded to
+              somehow solve this problem: either I continue to study and practice the C # programming language or completely change my
+              professional activity. I chose the first solution, but instead of learning the C# programming language, I began to learn the
+              Ruby and Ruby on Rails. So, I wanted to become a Ruby on Rails developer, despite my negative experiences in the past.
+            </p>
+            <p>
+              I started developing in Ruby on Rails from September 2018 and continue to this day. During this period of time, I successfully
+              completed an intensive Ruby on Rails course from the online school <a href="https://goodprogrammer.ru/">Good Programmer</a> and
+              found my first job as a Ruby on Rails developer.
+            </p>
+            <p class="margin-bottom-1x"><strong>Main development skills:</strong></p>
+            <ul>
+              <li>Developing applications in the Ruby programming language using the Ruby on Rails framework.</li>
+              <li>Applying in designing applications of the basic principles of OOP, MVC, REST.</li>
+              <li>Testing applications using the Rspec and Capybara gems.</li>
+              <li>Using SQLite and PostreSQL DBMS in applications.</li>
+              <li>Processing and creating data in XML, JSON.</li>
+              <li>Deploying applications on Heroku, VPS (nginx + passenger) or using the Capistrano gem.</li>
+              <li>Creating websites using HTML, CSS, JavaScript (jQuery).</li>
+            </ul>
+            <p>
+              Projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="media info-block-header margin-bottom-1x">
         <div class="title-large padding-left-4x">Skills</div>
         <div class="collapsible-icon fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
@@ -154,6 +207,12 @@
               <li>Participation in making technical decisions.</li>
               <li>Fixing user bugs.</li>
             </ul>
+            <p>
+              On May 28, 2018, I got a second job as an engineer-programmer at EOS (electronic office systems). I was developing an electronic
+              document management system developed on the basis of the Microsoft SharePoint platform. After 3 months of work, the company
+              management could not find me the amount of work for my position, because the company hired me as a junior specialist, and I left
+              the company.
+            </p>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
@@ -171,6 +230,13 @@
               <li>Developing business processes for the CRM system.</li>
               <li>Configuring the CRM system.</li>
             </ul>
+            <p>
+              On January 23, 2017, after graduating from university, I got a first job as a programmer at TOPCRM LLC. I was developing a CRM
+              system on the Terrasoft BPM'Online platform. After 15 months of successful work in the company, I began to understand that I
+              don't want to work here anymore because of the negative experience of developing the Terrasoft BPM'Online platform, and also
+              because I had a little different idea of the programmer work. As a result, I left the company and I didn't want to develop the
+              Terrasoft BPM'Online platform anymore in the future.
+            </p>
           </div>
         </div>
       </div>
