--- a/russian_index.html
+++ b/russian_index.html
@@ -100,7 +100,61 @@
 
     <div class="container">
       <div class="media info-block-header margin-bottom-1x">
-        <div class="title-large padding-left-4x">Skills</div>
+        <div class="title-large padding-left-4x">Обо мне</div>
+        <div class="collapsible-icon fa-layers fa-fw fa-2x">
+          <i class="fas fa-circle"></i>
+          <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
+        </div>
+      </div>
+      <div class="info-block-content-active">
+        <div class="row">
+          <div class="twelve columns margin-top-1x">
+            <p>
+              Ищу работу Full Stack Ruby on Rails разработчика. Рассматриваю удалённую работу или релокацию в другую страну (предпочтительно
+              европейские страны).
+            </p>
+            <p>
+              Я занимаюсь программированием достаточно давно, начиная с учёбы в школе и университете и заканчивая сегодняшним днём. В
+              университете я достаточно неплохо владел такими языками программирования, как Pascal (Delphi) и C/C++ с использованием
+              фреймворка QT. Также я изучал язык программирования Ruby и фреймворк Ruby on Rails. Но я так и не смог изучить его в
+              университете из-за плохого уровня преподавания. В итоге я не хотел больше заниматься разработкой на Ruby on Rails в будущем.
+            </p>
+            <p>
+              После окончания учёбы в университете я нашёл себе работу программиста. Основным языком программирования у меня был C# и полтора
+              года я разрабатывал приложения. На тот период времени я успел поработать в двух компаниях. Но, к сожалению, по разным причинам
+              мне пришлось уйти из этих компаний и искать новую работу, где я мог бы работать в профессиональной команде, постоянно улучшать
+              свой уровень разработки и стать разработчиком C# на достойном уровне. Все мои попытки поиска работы были безуспешными. И мне
+              нужно было как-то решить данную проблему: либо я продолжаю изучать и практиковать язык программирования C#, либо полностью
+              меняю свою профессиональную деятельность. Я выбрал первый вариант решения проблемы, но вместо изучения языка программирования
+              С#, я начал изучать Ruby и Ruby on Rails. Таким образом, я захотел стать Ruby on Rails разработчиком, несмотря на мой негативный
+              опыт в прошлом.
+            </p>
+            <p>
+              Я начал заниматься разработкой на Ruby on Rails с сентября 2018 года и продолжаю по сей день. За этот период времени я успешно
+              закончил интенсивный курс по Ruby on Rails от онлайн-школы <a href="https://goodprogrammer.ru/">Хороший Программист</a> и нашёл
+              свою первую работу Ruby on Rails разработчика.
+            </p>
+            <p class="margin-bottom-1x"><strong>Основные навыки разработки:</strong></p>
+            <ul>
+              <li>Разработка приложений на языке программирования Ruby с использованием фреймворка Ruby on Rails.</li>
+              <li>Применение в разработке приложений основных принципов ООП, MVC, REST.</li>
+              <li>Тестирование приложений с использованием гемов Rspec и Capybara.</li>
+              <li>Использование СУБД SQLite и PostreSQL в приложениях.</li>
+              <li>Обработка и создание данных в формате XML, JSON.</li>
+              <li>Развёртывание приложений на Heroku, VPS (nginx + passenger) или с использованием гема Capistrano.</li>
+              <li>Создание сайтов с использованием HTML, CSS, JavaScript (JQuery).</li>
+            </ul>
+            <p>
+              Проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="media info-block-header margin-bottom-1x">
+        <div class="title-large padding-left-4x">Навыки</div>
         <div class="collapsible-icon fa-layers fa-fw fa-2x">
           <i class="fas fa-circle"></i>
           <i class="fas fa-minus fa-inverse" data-fa-transform="shrink-6"></i>
@@ -154,6 +208,12 @@
               <li>Участие в принятии технических решений.</li>
               <li>Исправление возникающих ошибок у пользователей.</li>
             </ul>
+            <p>
+              28 мая 2018 года я устроился на вторую работу на должность инженер-программиста в компанию ЭОС (электронные офисные системы). Я
+              занимался разработкой системы электронного документооборота, разработанную на базе платформы Microsoft SharePoint. После 3
+              месяцев работы руководство компании не смогло найти мне объём работы для моей должности, поскольку компания взяла меня на работу
+              в качестве младшего специалиста, и я ушёл из компании.
+            </p>
           </div>
         </div>
         <div class="row margin-top-1x margin-bottom-3x">
@@ -171,6 +231,13 @@
               <li>Разработка бизнес процессов для CRM-системы.</li>
               <li>Настройка CRM-системы.</li>
             </ul>
+            <p>
+              23 января 2017 года после окончания учёбы в университете я устроился на первую работу на должность программиста в компанию
+              ООО "ТОПСИЭРЭМ". Я занимался разработкой CRM-системы на платформе Terrasoft BPM'Online. После 15 месяцев успешной работы в
+              компании я начал понимать, что я не хочу больше здесь работать из-за негативного опыта разработки платформы Terrasoft
+              BPM'Online, а также из-за того, что я немного по-другому представлял себе работу программиста. В итоге, я ушёл из компании и
+              больше не хочу заниматься разработкой платформы Terrasoft BPM'Online.
+            </p>
           </div>
         </div>
       </div>
