--- a/index.html
+++ b/index.html
@@ -143,8 +143,13 @@
               <li>Deploying applications on Heroku, VPS (nginx + passenger) or using the Capistrano gem.</li>
               <li>Creating websites using HTML, CSS, JavaScript (jQuery).</li>
             </ul>
+            <p class="margin-bottom-1x"><strong>My examples of projects on Ruby on Rails:</strong></p>
+            <ul>
+              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; It is a web-application, a clone of the famous web-site <a href="https://ask.fm/">ask.fm</a>.</li>
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; It is a web application designed to create meetings with friends and acquaintances in various places.</li>
+            </ul>
             <p>
-              Projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>.
+              Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>.
             </p>
           </div>
         </div>
@@ -192,6 +197,23 @@
         </div>
       </div>
       <div class="info-block-content-active">
+        <div class="row margin-top-1x margin-bottom-3x">
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Ruby on Rails Developer</p>
+            <p>March 2019 &mdash; currently</p>
+            <p>SoftTelematics, Moscow, Russia</p>
+            <p><a href="https://natelsys.ru/">Official site</a></p>
+          </div>
+          <div class="two-thirds column">
+            <h5><strong>Responsibilities:</strong></h5>
+            <ul>
+              <li>Developing a new functionality for a single digital platform for collecting tolls on the roads.</li>
+              <li>Optimization and refactoring code.</li>
+              <li>Writing integration and unit tests.</li>
+              <li>Fixing user bugs.</li>
+            </ul>
+          </div>
+        </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Software Engineer</p>
@@ -283,7 +305,7 @@
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school Good Programmer</strong></h5>
-            Ruby on Rails intensive course. <a href="#0">Certificate (certificate will be updated soon)</a><br>
+            Ruby on Rails intensive course.<br>
             <a href="https://goodprogrammer.ru/">Official site</a>
           </div>
         </div>
