--- a/russian_index.html
+++ b/russian_index.html
@@ -144,8 +144,13 @@
               <li>Развёртывание приложений на Heroku, VPS (nginx + passenger) или с использованием гема Capistrano.</li>
               <li>Создание сайтов с использованием HTML, CSS, JavaScript (JQuery).</li>
             </ul>
+            <p class="margin-bottom-1x"><strong>Мои примеры проектов на Ruby on Rails:</strong></p>
+            <ul>
+              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; это веб-приложение, клон известного сайта <a href="https://ask.fm/">ask.fm</a>.</li>
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; это веб-приложение, предназначеное для создания встречи с друзьями и знакомыми в различных местах.</li>
+            </ul>
             <p>
-              Проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>.
+              Другие проекты на Ruby и Ruby on Rails можно посмотреть на моём <a href="https://github.com/cuurjol">GitHub профиле</a>.
             </p>
           </div>
         </div>
@@ -193,6 +198,23 @@
         </div>
       </div>
       <div class="info-block-content-active">
+        <div class="row margin-top-1x margin-bottom-3x">
+          <div class="one-third column left-column margin-bottom-1x">
+            <p class="title">Разработчик Ruby on Rails</p>
+            <p>Март 2019 &mdash; по настоящее время</p>
+            <p>СофтТелематика, Москва, Россия</p>
+            <p><a href="https://natelsys.ru/">Официальный сайт</a></p>
+          </div>
+          <div class="two-thirds column">
+            <h5><strong>Обязанности:</strong></h5>
+            <ul>
+              <li>Разработка нового функционала для единой цифровой платформы взимания платы за проезд по дорогам.</li>
+              <li>Оптимизация и рефакторинг кода.</li>
+              <li>Написание интеграционных и юнит тестов.</li>
+              <li>Исправление возникающих ошибок у пользователей.</li>
+            </ul>
+          </div>
+        </div>
         <div class="row margin-top-1x margin-bottom-3x">
           <div class="one-third column left-column margin-bottom-1x">
             <p class="title">Инженер-программист</p>
@@ -284,7 +306,7 @@
           </div>
           <div class="two-thirds column">
             <h5><strong>Онлайн-школа Хороший Программист</strong></h5>
-            Интенсивный курс по Ruby on Rails. <a href="#0">Сертификат (сертификат будет обновлён в ближайщее время)</a><br>
+            Интенсивный курс по Ruby on Rails.<br>
             <a href="https://goodprogrammer.ru/">Официальный сайт</a>
           </div>
         </div>
