--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             </ul>
             <p class="margin-bottom-1x"><strong>My examples of projects on Ruby on Rails:</strong></p>
             <ul>
-              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; It is a web-application, a clone of the famous web-site <a href="https://ask.fm/">ask.fm</a>.</li>
-              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; It is a web application designed to create meetings with friends and acquaintances in various places.</li>
+              <li><a href="https://cuurjol-askme.herokuapp.com/">ASKME</a> &mdash; It is a Web application, a clone of the famous Web site <a href="https://ask.fm/">ask.fm</a>.</li>
+              <li><a href="https://cuurjol-bbq.herokuapp.com/">BARBECUE</a> &mdash; It is a Web application designed to create meetings with friends and acquaintances in various places.</li>
             </ul>
             <p>
               Other projects on Ruby and Ruby on Rails can be viewed on my <a href="https://github.com/cuurjol">GitHub profile</a>.
