--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
           </div>
           <div class="two-thirds column">
             <h5><strong>Online-school Good Programmer</strong></h5>
-            Ruby on Rails intensive course.<br>
+            Ruby on Rails intensive course.&nbsp;
+            <a href="https://goodprogrammer.ru/certificates/5524fd4871f75c3054ae">Certificate</a><br>
             <a href="https://goodprogrammer.ru/">Official site</a>
           </div>
         </div>
