--- a/russian_index.html
+++ b/russian_index.html
@@ -306,7 +306,8 @@
           </div>
           <div class="two-thirds column">
             <h5><strong>Онлайн-школа Хороший Программист</strong></h5>
-            Интенсивный курс по Ruby on Rails.<br>
+            Интенсивный курс по Ruby on Rails.&nbsp;
+            <a href="https://goodprogrammer.ru/certificates/5524fd4871f75c3054ae">Сертификат</a><br>
             <a href="https://goodprogrammer.ru/">Официальный сайт</a>
           </div>
         </div>
